# ddii_scopus

./: .gitignore  LICENSE  README.md  data.hdf5  emulator.py  engine.py  main.py  main_config_dialog.py  main_hvip_dialog.py  main_mpp_dialog.py  main_trapezoid_dialog.py  pyproject.toml  to_exe.py
config/: config.ini
doc/: ~$отокол МПП и ДЭП в4.doc  Протокол МПП и ДЭП в4.doc
frontend/: DialogConfig.ui  DialogGraphWidget.ui  DialogMPPControl.ui  DialogSerial.ui  DialogTerm.ui  HVIP_window.ui  MainWindow.ui  MainWindow4.ui  MainWindow5.ui  MainWindow6.ui  graph_widget_window.ui
frontend/engineWidget/: WidgetGraph.ui  WidgetRunMeas.ui  WidgetRunMeasure.ui
log/graph_data/: test.hdf5  test.phd5
modules/: engine.py
modules/Emulator/: emulator.py
modules/Engine/: engine.py  engine.ui
modules/Main_Config/: DialogConfig.ui  config_dialog.yaml  main_config_dialog.py  save_config.py
modules/Main_GraphWidget/: main_graph_widget.py
modules/Main_Graph_Widget/: DialogGraphWidget.ui  main_graph_widget.py
modules/Main_Hvip/: HVIP_window.ui  ddii_scopus.code-workspace  hvip_dialog.yaml  main_hvip_dialog.py  save_config.py
modules/Main_Mpp/: main_mpp_dialog.py
modules/Main_Serial/: DialogSerialTCP.ui  main_serial_dialog.py  main_serial_dialog_tcp.py
modules/Main_Term/: main_term_dialog.py
modules/Main_Waveform_Viewer/: main_waveform_viewer_widget.ui
src/: async_task_manager.py  craft_custom_widget.py  customComboBox_COMport.py  ddii_comand.py  ddii_command.py  detector.py  env_var.py  filtrs_data.py  hdf5_explorer.py  log_config.py  main_window_maker.py  modbus_worker.py  mpp.py  parsers.py  parsers_pack.py  pips.py  plot_renderer.py  plotter.py  print_logger.py  py_toggle.py  serail_process.py  signal_manager.py  sipm.py  widget_maker.py  write_data_to_file.py  ww_maker.py
style/: DialogConfig.ui  DialogControlMPP.ui  DialogMPPLavelControl.ui  DialogTrapezoid.ui  HVIP_window.ui  Light.qss  MainWindow2.ui  MainWindow3.ui  MainWindow4.ui  Parser_waveform_ddii.ui  graph_widget_window.ui  styleSheet.py
tmp/: QUICK_START.md  README_modbus_examples.md  integration_example.py  main_mpp_dialog.py  modbus_client_example.py  modbus_server_example.py  signal_pips.vsz  simple_modbus_server.py  simple_server_mb.py  test_quick_client.py  test_ser_mb.py
(+72 files in other folders)
