[tool.poetry]
name = "virtual-ddii"
version = "0.1.0"
description = ""
authors = ["Komarov V.I."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pyqt6 = "=6.7.0"
loguru = "^0.7.2"
crcmod = "^1.7"
pyqtgraph = "^0.13.3"
qtpy = "^2.4.1"
logger = "^1.4"
pyserial = "^3.5"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
qtmodern = "^0.2.0"
firstblood = "^0.0.1"
libnum = "^1.7.1"
tabulate = "^0.9.0"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pymodbus = "=3.6.8"
colorlog = "^6.8.2"
pathlib = "=1.0.1"
asyncio = "^3.4.3"
qasync = "^0.27.1"
dynaconf = "^3.2.6"
pyyaml = "^6.0.2"
h5py = "^3.12.1"
typing-extensions = "^4.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["E", "F", "PL"]
ignore = ["PLR2004", "PLR0913"]
