[project]
name = "virtual-ddii"
version = "0.1.0"
description = ""
authors = [
    {name = "Komarov V.I."}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26.2,<2.0.0",
    "pyqt6==6.7.0",
    "loguru>=0.7.2,<0.8.0",
    "crcmod>=1.7,<2.0",
    "pyqtgraph>=0.13.3,<0.14.0",
    "qtpy>=2.4.1,<3.0.0",
    "logger>=1.4,<2.0",
    "pyserial>=3.5,<4.0",
    "matplotlib>=3.8.2,<4.0.0",
    "scipy>=1.11.4,<2.0.0",
    "qtmodern>=0.2.0,<0.3.0",
    "firstblood>=0.0.1,<0.0.2",
    "libnum>=1.7.1,<2.0.0",
    "tabulate>=0.9.0,<0.10.0",
    "pandas>=2.2.1,<3.0.0",
    "openpyxl>=3.1.2,<4.0.0",
    "pymodbus==3.6.8",
    "colorlog>=6.8.2,<7.0.0",
    "pathlib==1.0.1",
    "asyncio>=3.4.3,<4.0.0",
    "qasync>=0.27.1,<0.28.0",
    "dynaconf>=3.2.6,<4.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "h5py>=3.12.1,<4.0.0",
    "typing-extensions>=4.14.0,<5.0.0",
    "qcustomwindow @ git+https://github.com/CrinitusFeles/QCustomWindow.git ; sys_platform == 'win32'"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "virtual_ddii/**/*",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["virtual_ddii"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
select = ["E", "F", "PL"]
ignore = ["PLR2004", "PLR0913"]